--- a/templates/index.html
+++ b/templates/index.html
@@ -121,18 +121,42 @@
             </div>
             <div class="row align-items-center">
                 {% for client in clients %}
+                {% if forloop.counter <= 6 %}
                 <div class="col-4 col-lg-2 col-sm-3 mt-2">
                     <div class="single_service_part">
                         <div class="single_service_text p-2">
                             <img src="{{client.image.url}}" alt="">
-                            <!-- <h4 class="mt-1">{{client.name}}</h4> -->
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 {% endfor %}
+            </div>
+            <div class="collapse" id="collapseClients">
+                <div class="row align-items-center">
+                    {% for client in clients %}
+                    {% if forloop.counter > 6 %}
+                    <div class="col-4 col-lg-2 col-sm-3 mt-2">
+                        <div class="single_service_part">
+                            <div class="single_service_text p-2">
+                                <img src="{{client.image.url}}" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="row justify-content-center mt-3">
+                <div class="col-lg-8 text-center">
+                    <button class="btn btn-dark btn-sm mt-3" type="button" data-toggle="collapse" data-target="#collapseClients" aria-expanded="false" aria-controls="collapseClients">
+                        Show More
+                    </button>
+                </div>
             </div>
         </div>
     </section>
+    
     
     <!-- Service part end-->
 
