--- a/templates/service.html
+++ b/templates/service.html
@@ -25,8 +25,7 @@
         <div class="row justify-content-center">
             <div class="col-10">
                 <div class="section_tittle">
-                    <h2>Practice Areas</h2>
-                    <p><span style="font-weight: bold;">Area of Practice at a glance: </span>All sorts of litigation, Alternative Dispute Resolution (ADR),
+                    <p style="text-align: justify;"><span style="font-weight: bold;">Area of Practice at a glance: </span>All sorts of litigation, Alternative Dispute Resolution (ADR),
                         Arbitration, Admiralty and Maritime Dispute Resolution, Banking and Finance, Corporate
                         Documentation, Merger and Acquisition, Employment and Labour law, Intellectual property,
                         Investment and Direct Foreign Investment, Public Procurement law, Real estate, Security and
@@ -40,7 +39,7 @@
                 <div class="single_single_service">
                     <img style="height:auto; width: 100px;" src="{{service.image.url}}" alt="#">
                     <h4>{{service.title}}</h4>
-                    <p>{{service.description}}</p>
+                    <p style="text-align: justify;">{{service.description}}</p>
                 </div>
             </div>
             {% endfor %}
