fix design and issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -152,9 +152,12 @@
     <section class=" section_padding">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <div class="mb-5 text-center">
                         <h2>Our Clients</h2>
+                        <p>
+                            We have provided legal services to and conducted cases for many companies,  firms and persons. Some of them are -
+                        </p>
                     </div>
                 </div>
             </div>
