fix design and issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -166,8 +166,8 @@
                 {% if forloop.counter <= 6 %}
                 <div class="col-4 col-lg-2 col-sm-3 mt-2">
                     <div class="single_service_part">
-                        <div class="single_service_text p-2" style="border: 5px solid #bb9761; border-radius: 4px;">
-                            <img style="height: 120px; border-radius: 5px;" src="{{client.image.url}}" alt="">
+                        <div class="single_service_text p-2">
+                            <img class="shadow rounded" style="height: 120px; border-radius: 5px;" src="{{client.image.url}}" alt="">
                             <h6 class="mt-3">{{client.name}}</h6>
                         </div>
                     </div>
