fix design and issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -182,7 +182,7 @@
                     <div class="col-4 col-lg-2 col-sm-3 mt-2">
                         <div class="single_service_part">
                             <div class="single_service_text p-2">
-                                <img style="height: 130px; border-radius: 5px;" src="{{client.image.url}}" alt="">
+                                <img class="shadow rounded" style="height: 130px; border-radius: 5px;" src="{{client.image.url}}" alt="">
                                 <h6 class="mt-3">{{client.name}}</h6>
                             </div>
                         </div>
