--- a/templates/practice_area_details.html
+++ b/templates/practice_area_details.html
@@ -11,8 +11,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2>about us</h2>
-                        <p>home <span>//</span>about us</p>
+                        <h2>{{practice_area.title}}</h2>
                     </div>
                 </div>
             </div>
@@ -24,29 +23,17 @@
 <!-- about part start-->
 <section class="about_part section_padding">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="section_tittle text-center">
-                    <h2>{{about.title}}</h2>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 col-sm-7">
+        <div class="row justify-content-center align-items-center text-center">
+            <div class="col-12">
                 <div class="about_part_img">
-                    <img src="{{about.image1.url}}" alt="#">
-                </div>
-            </div>
-            <div class="col-lg-6 col-sm-7">
-                <div class="about_part_img">
-                    <img src="{{about.image2.url}}" alt="#">
+                    <img style="height: 120px;" src="{{practice_area.image.url}}" alt="#">
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="about_text text-center">
-                    <p>{{about.text}}</p>
+                    <p>{{practice_area.description}}</p>
                 </div>
             </div>
         </div>
