--- a/templates/service.html
+++ b/templates/service.html
@@ -36,10 +36,10 @@
         <div class="row justify-content-between">
             {% for service in services %}
             <div class="col-lg-6 col-sm-12">
-                <div class="single_single_service">
-                    <img style="height:auto; width: 100px;" src="{{service.image.url}}" alt="#">
-                    <h4>{{service.title}}</h4>
-                    <p style="text-align: justify;">{{service.description}}</p>
+                <div class="">
+                    <h4>
+                        {{forloop.counter}}.<a href="{% url 'core:practice_details' service.id %}"> {{service.title}}</a>
+                    </h4>
                 </div>
             </div>
             {% endfor %}
