fix design and issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
                 {% for blog in blogs %}
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_offer_part">
-                        <div class="single_offer">
+                        <div class="single_blog">
                             <img src="{{blog.image.url}}" alt="">
                             <div class="mt-2">
                                 <div class="single-home-blog">
