--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -87,6 +87,20 @@
                 border-radius: 8px;
             }
         }
+        .single_blog img {
+            height: 350px !important;
+            width: 100% !important;
+            object-fit: cover !important;
+            border-radius: 10px;
+        }
+        @media (max-width: 768px) {
+            .single_blog img {
+                height: 300px !important;
+                width: 100% !important;
+                object-fit: cover !important;
+                border-radius: 10px;
+            }
+        }
     </style>
 
 </head>
