fix design and issues

--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -88,7 +88,7 @@
             }
         }
         .single_blog img {
-            height: 350px !important;
+            /* height: 350px !important; */
             width: 100% !important;
             object-fit: cover !important;
             border-radius: 10px;
