--- a/templates/practice_area_details.html
+++ b/templates/practice_area_details.html
@@ -23,6 +23,7 @@
 <!-- about part start-->
 <section class="about_part section_padding">
     <div class="container">
+        {% if practice_area.image %}
         <div class="row justify-content-center align-items-center text-center">
             <div class="col-12">
                 <div class="about_part_img">
@@ -30,6 +31,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="about_text text-center">
