--- a/templates/index.html
+++ b/templates/index.html
@@ -177,7 +177,7 @@
                 <div class="col-4 col-lg-2 col-sm-3 mt-2 client-item {% if forloop.counter > 6 %}d-none{% endif %}">
                     <div class="single_service_part">
                         <div class="single_service_text p-2">
-                            <img class="shadow rounded" style="height: 120px; border-radius: 5px;" src="{{ client.image.url }}" alt="">
+                            <img class="shadow rounded" style="height: auto; border-radius: 5px;" src="{{ client.image.url }}" alt="">
                             <h6 class="mt-3">{{ client.name }}</h6>
                         </div>
                     </div>
