fix design and issues

--- a/templates/service.html
+++ b/templates/service.html
@@ -11,8 +11,8 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2>practice areas</h2>
-                        <p>home <span>//</span>practice areas</p>
+                        <h2>area of practice</h2>
+                        <p>home <span>//</span>area of practice</p>
                     </div>
                 </div>
             </div>
