--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -146,7 +146,7 @@
                                 <a class="nav-link text-light" href="{% url 'core:about' %}">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="{% url 'core:service' %}">Practice Areas</a>
+                                <a class="nav-link text-light" href="{% url 'core:service' %}">Area Of Practice</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="{% url 'core:team' %}">Our Team</a>
@@ -238,7 +238,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                     <div class="footer_menu">
                                         <ul>
                                             <li><a href="{% url 'core:index' %}">Home</a></li>
-                                            <li><a href="{% url 'core:service' %}">Practice Areas</a></li>
+                                            <li><a href="{% url 'core:service' %}">Area Of Practice</a></li>
                                             <li><a href="{% url 'core:contact' %}">Contact</a></li>
                                             <li><a href="{% url 'core:blog' %}">Blog</a></li>
                                         </ul>
