fix design and issues

--- a/templates/team.html
+++ b/templates/team.html
@@ -11,8 +11,8 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2>Attorneys</h2>
-                        <p>home <span>//</span>Attorneys</p>
+                        <h2>Our Team</h2>
+                        <p>home <span>//</span>Our Team</p>
                     </div>
                 </div>
             </div>
