fix design and issues

--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -6,6 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="K0Z5jiKfHpCXDbhxbsuvO9_759GtMZ7Qbo_n5liLNVg" />
 
     <title>
         {% block title %}{% endblock title %} | {{site_settings.company_name}}
