--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -183,10 +183,7 @@
                 <div class="col-sm-6 col-xl-4">
                     <div class="single-footer-widget footer_1">
                         <a href="index.html"> <img src="{{site_settings.logo.url}}" alt=""> </a>
-                        <p>The Firm is established in Dhaka with the
-                            vision to provide the most appropriate, cost-effective, one-stop, and result-oriented solution for
-                            every legal issue. The firm provided advisory and litigation services to hundreds of individuals,
-                            companies and firms in Bangladesh </p>
+                        <p>{{site_about.text}}</p>
                         <div class="social_icon">
                             <a href="#"> <i class="ti-facebook"></i> </a>
                             <a href="#"> <i class="ti-twitter-alt"></i> </a>
