--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -127,7 +127,7 @@
 
 <!--::header part start::-->
 <header class="main_menu home_menu" style="background-color: #162b45; height: 100px;">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
