--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
-{% extends "./partial/base.html" %} 
+{% extends "./partial/base.html" %}
 
 {% load static %}
-{% block title %}Contact us{% endblock title %} 
+{% block title %}Contact us{% endblock title %}
 
 {% block content %}
   <!-- breadcrumb start-->
@@ -30,13 +30,11 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="{% url 'core:contact' %}" method="post" id="contactForm"
-            novalidate="novalidate">
+          <form class="form-contact contact_form" action="{% url 'core:contact' %}" method="post" id="contactForm" novalidate="novalidate">
             {% csrf_token %}
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
-
                   <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9"
                     onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'"
                     placeholder='Enter Message'></textarea>
@@ -105,4 +103,53 @@
     </div>
   </section>
   <!-- ================ contact section end ================= -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="contactModalLabel">Message Sent</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Your message has been sent successfully. We will get back to you shortly.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
+
+{% block extra_scripts %}
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const contactForm = document.getElementById('contactForm');
+      contactForm.addEventListener('submit', function (event) {
+        event.preventDefault();
+        const formData = new FormData(contactForm);
+
+        fetch(contactForm.action, {
+          method: 'POST',
+          body: formData,
+          headers: {
+            'X-CSRFToken': '{{ csrf_token }}'
+          }
+        }).then(response => {
+          if (response.ok) {
+            $('#contactModal').modal('show');
+            contactForm.reset();
+          } else {
+            alert('There was an error sending your message. Please try again.');
+          }
+        }).catch(error => {
+          alert('There was an error sending your message. Please try again.');
+        });
+      });
+    });
+  </script>
+{% endblock extra_scripts %}
