--- a/templates/partial/base.html
+++ b/templates/partial/base.html
@@ -251,6 +251,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     </footer>
     <!-- footer part end-->
 
+    {% block extra_scripts %} {% endblock %}
+
     <script>
         function toggleServices() {
             const serviceItems = document.querySelectorAll('.service-item');
